# simulation

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: research-request.md
notebooks/: Economy Simulator Mesa.ipynb  Simulator Playground.ipynb
src/simulation/: __init__.py  agents.py  model.py  run.py  server.py
