[tool.poetry]
name = "simulation"
version = "0.0.1"
description = "Golden's Tokenomics/Economy Agent Simulation"
authors = ["aychang95"]

[tool.poetry.dependencies]
python = "~3.8.8"
wheel = "^0.36.2"
jupyterlab = "^3.0.0"
ipywidgets = "^7.6.3"
matplotlib = "^3.5.1"
pandas = "^1.4.1"
numpy = "^1.22.3"
tqdm = "^4.63.1"
Mesa = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
